@@ -3,11 +3,13 @@ package it.pagopa.selfcare.cucumber.utils;
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
 import it.pagopa.selfcare.cucumber.utils.model.JwtData;
+import jakarta.enterprise.context.ApplicationScoped;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyFactory;
 import java.security.NoSuchAlgorithmException;
 import java.security.interfaces.RSAPrivateKey;
@@ -18,6 +20,8 @@ import java.util.Base64;
 import java.util.Optional;
 
 @Slf4j
+@Component
+@ApplicationScoped
 public class TestJwtGenerator {
 
     private final RSAPrivateKey privateKey;
@@ -39,12 +43,16 @@ public class TestJwtGenerator {
 
     private RSAPrivateKey readPrivateKey() throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
         log.info("Reading private key");
-        final File file = new File("src/test/resources/key/private-key.pem");
-        String privateKeyString = new String(Files.readAllBytes(file.toPath()));
-        privateKeyString = privateKeyString.replace("-----BEGIN PRIVATE KEY-----", "").replace("-----END PRIVATE KEY-----", "").replaceAll("\\s+", "");
-        final byte[] pKeyEncoded = Base64.getDecoder().decode(privateKeyString);
-        final PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(pKeyEncoded);
-        return (RSAPrivateKey) KeyFactory.getInstance("RSA").generatePrivate(keySpec);
+        ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
+        try (InputStream inputStream = classLoader.getResourceAsStream("key/private-key.pem")) {
+            if (inputStream == null) {
+                throw new IOException("File not found in classpath");
+            }
+            String privateKeyString = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+            privateKeyString = privateKeyString.replace("-----BEGIN PRIVATE KEY-----", "").replace("-----END PRIVATE KEY-----", "").replaceAll("\\s+", "");
+            byte[] pKeyEncoded = Base64.getDecoder().decode(privateKeyString);
+            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(pKeyEncoded);
+            return (RSAPrivateKey) KeyFactory.getInstance("RSA").generatePrivate(keySpec);
+        }
     }
-
 }
